@@ -1,3 +1,9 @@
+2002-06-02  Stefan Petersen  <spe@stacken.kth.se>
+
+	* gerb_image.h, gerber.c: Thanks to Stephen Adam I now know
+	  what %IC??*% means (Input Code) and have added it to the parser.
+	
+
 2002-05-18  Stefan Petersen  <spe@stacken.kth.se>
 
 	* configure.in, acconfig.h, src/Makefile.am, src/gerbv.c,
